codama-macros/tests/codama_attribute/type_nodes/struct_type_node/invalid_fields.fail.rs
use codama_macros::codama;

#[codama(type = struct(number(u32), boolean, field("age", number(u8)), 3 * 4))]
pub struct Test;

fn main() {}
